# hmm

./: .gitignore  README.md  conda.yaml  inf.py  inf2.py  logistic_regression.py  pyproject.toml  test.py
data/: Ex_1.csv  Ex_10.csv  Ex_2.csv  Ex_3.csv  Ex_4.csv  Ex_5.csv  Ex_6.csv  Ex_7.csv  Ex_8.csv  Ex_9.csv
experiments/: __init__.py  infer_old.py  inference.py  logistic_regression.py  simulation.py  simulation2.py
experiments/notebooks/: inference.ipynb  learning.ipynb  logistic_regression.ipynb
experiments/tests/: test_belief_update.py  test_belief_update_inference.py  test_equivalence.py  test_forward_backward.py  test_hard_assignment_em.py  test_hard_assignment_em_and_plot.py  test_on_given_data.py  test_p_x_given_c.py
hmm/: __init__.py  data.py  hmm.py  hmm2.py  hmm_belief_prop.py  learning.py  old_hmm.py  types.py
hmm/hmm/: model.py
