[tool.poetry]
name = "hmm"
version = "0.1.0"
description = "A hidden Markov model of visual attention."
authors = ["Niels Horn", "Jinyang Liu", "Oscar Hedeby", "Frederik Sunesen"]
license = "The Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.10"
ruff = "^0.0.253"
numba = "^0.56.4"
black = {extras = ["jupyter"], version = "^23.3.0"}
isort = "^5.12.0"
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"

[tool.poetry.group.dev.dependencies]
jsonschema = "^4.17.3"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.mccabe]
max-complexity = 10


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
